<resources>
    <string name="app_name">CarVal</string>
    <string name="Purchase_title">Purchase Car</string>
    <string name="Sell_title">Sell Car</string>
    <string name="selected_item">Selected item:</string>
    <string name="Year_title">Model Year <font color='#FF0000'>*</font></string>
    <string name="KM_title">Kilometers <font color='#FF0000'>*</font></string>
    <string name="Transmission_title">Transmission <font color='#FF0000'>*</font> <font color='#FFFFFF'> : </font> </string>
    <string name="Transmission_title_optional">Transmission    : </string>
    <string name="OwnerN_title_optional">Owner No. : </string>
    <string name="Mileage_title_optional">Mileage</string>
    <string name="EngineCC_title_optional">Engine CC</string>
    <string name="Power_title_optional">Power</string>
    <string name="NSeats_title_optional">Number Of Seats</string>
    <string name="NewPrice_title_optional">New Price</string>


    <string name="OwnerN_title_required">Owner No. <font color='#FF0000'> *</font> <font color='#FFFFFF'> : </font>  </string>
    <string name="Mileage_title_required">Mileage<font color='#FF0000'> *</font></string>
    <string name="EngineCC_title_required">Engine CC<font color='#FF0000'> *</font></string>
    <string name="Power_title_required">Power<font color='#FF0000'> *</font></string>
    <string name="NSeats_title_required">Number Of Seats<font color='#FF0000'> *</font></string>
    <string name="NewPrice_title_required">New Price<font color='#FF0000'> *</font></string>

    <string name="Predictbutton_title">Predict price</string>
    <string name="Filterbutton_title">Filter</string>

    <string name="PredictPrice_title">Predict Car Price</string>

    <string name="Manual_choice_title">Manual</string>

    <string name="Auto_choice_title">Auto</string>
    <string name="One_title">1</string>
    <string name="Two_title">2</string>
    <string name="Three_title">3</string>
    <string name="Four_title">4</string>

    <string name="Success_title">Success!</string>
    <string name="Success_subtitle">Your car price has been evaluated.</string>
    <string name="Price_subtitle" formatted="true">$%.0f</string>


    <string name="Min_modelYear">Min Model Year</string>
    <string name="Max_modelYear">Max Model Year</string>
    <string name="Min_KM">Min Kilometers</string>
    <string name="Max_KM">Max Kilometers</string>
    <string name="Min_mileage">Min Mileage</string>
    <string name="Max_mileage">Max Mileage</string>
    <string name="Min_engine">Min Engine CC </string>
    <string name="Max_engine">Max Engine CC</string>
    <string name="Min_power">Min Power</string>
    <string name="Max_power">Max Power</string>
    <string name="Min_newprice">Min New Price</string>
    <string name="Max_newprice">Max New Price</string>
    <string name="Min_price">Min Price</string>
    <string name="Max_price">Max Price</string>



    <string name="Name">Name</string>
    <string name="Year">Year</string>
    <string name="DrivenKM">KM</string>
    <string name="FuelType">FuelType</string>

    <string name="Transmission">Transmission</string>

    <string name="Ownertype">Previous Owner No.</string>

    <string name="Mileage">Mileage</string>

    <string name="Engine">Engine CC</string>
    <string name="Power">Power</string>

    <string name="Seats">Seats</string>
    <string name="NewPrice">New Price</string>
    <string name="UsedPrice">Used Price</string>

    <string name="FilteredTable">Filtered Table</string>

    <string name="Clickme">Return to Main Menu</string>
    <string name="Clickme2">Evaluate Another Car</string>
    <string name="Clickme3">Filter more cars</string>






    <string-array name="FuelType">
        <item>Fuel Type</item>
        <item>Compressed Natural Gas ( CNG )</item>
        <item>Liquefied Petroleum Gas ( LPG )</item>
        <item>Petrol ( Gasoline )</item>
        <item>Diesel</item>

    </string-array>
    <string name="title_activity_predicted_price_screen">predicted_price_screen</string>

</resources>