<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/main"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:fontFamily="Roboto"
                android:textColor="@color/white"
                android:textSize="40sp" />


        </LinearLayout>
    </RelativeLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/bg"
        android:columnCount="1"
        android:padding="15dp"
        android:rowCount="4">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/purchase_button"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/GridBG"
            android:layout_margin="10dp"
            app:strokeColor="@color/CardBG"
            app:strokeWidth="1dp"
            android:elevation="4dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="273dp"
                    android:layout_height="105dp"
                    android:layout_margin="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/buy"
                    tools:ignore="InefficientWeight" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Purchase_title"
                    android:layout_marginTop="-45dp"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
                    </LinearLayout>
        </com.google.android.material.card.MaterialCardView>




        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/sell_button"

            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardBackgroundColor="@color/GridBG"
            app:strokeColor="@color/CardBG"
            app:strokeWidth="1dp"
            android:layout_margin="10dp"
            android:elevation="4dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="273dp"
                    android:layout_height="105dp"
                    android:layout_margin="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/sell"
                    tools:ignore="InefficientWeight" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sell_title"
                    android:layout_gravity="center"
                    android:layout_marginTop="-30dp"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>






    </GridLayout>
</LinearLayout>